# web-crawl-q-and-a

./: .gitignore  README.md  crawler.py  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
crawler/: crawler.py
embeddings/: source_embeddings.py
q-and-a/: question_and_answer.py
tests/: fixture.py  test_crawler.py
