[tool.poetry]
name = "web-crawl-q-and-a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28"
tiktoken = "^0.3.3"
pandas = "^1.5.3"
openai = "^0.27.2"
numpy = "^1.24.2"
bs4 = "^0.0.1"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
