[tool.poetry]
name = "web-crawl-q-and-a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
requests = "^2.28"
pandas = "^1.5.3"
openai = "^0.27.2"
numpy = "^1.24.2"
bs4 = "^0.0.1"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
tiktoken = "^0.3.3"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
scipy = "^1.10.1"
tenacity = "^8.2.2"
sklearn = "^0.0.post4"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
